[package]
name = "grimstone"
version = "1.17.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = {version = "1.0.126", features = ["derive"]}
byteorder = "1.4.3"
log = "0.4.14"
simple_logger = "1.11.0"
uuid = "0.8.2"
rand = "0.8.4"
rand_chacha = "0.3.1"

[features]
debug = []
world_syncers = []
single = ["world_syncers"]

[lib]
name = "grimstone"
path = "src/lib.rs"

[[bin]]
name = "grimstone-server"
path = "src/main.rs"
required-features = ["debug", "world_syncers", "single"]
